# ImageProcessing

./: 单词表.txt
Learn/OpenCV/: OpenCV函数开头的意义.md  OpenCV模块介绍.md  图形处理专业英语.txt  学习资源链接.md
Learn/OpenCV/examples/: CMakeLists.txt
Learn/OpenCV/examples/base/: CMakeLists.txt  loadImage.cpp  loadVideo.cpp  loadVideo2.cpp
Learn/OpenCV/examples/comm/: filesystem.h
Learn/OpenCV/examples/qianmo_opencv/: CMakeLists.txt  readme.md
Learn/OpenCV/examples/qianmo_opencv/OpenCV2/: CMakeLists.txt
Learn/OpenCV/examples/qianmo_opencv/OpenCV3/: CMakeLists.txt
Learn/OpenCV/examples/qianmo_opencv/OpenCV3/01/: 1_HelloOpencv.cpp  2_ImageErode.cpp  3_ImageBlur.cpp  4_ImageCanny.cpp  5_LoadVideo.cpp  6_CameraCapture.cpp
Learn/OpenCV/examples/qianmo_opencv/OpenCV3/02/: 1_CamShiftDemo.cpp  2_OpticalFlow.cpp
Learn/OpenCV/examples/qianmo_opencv/OpenCV3/03/: 1_WriteImage.cpp  2_LoadShowOutputImage.cpp  3_CreateTrackbar.cpp
Learn/OpenCV/examples/tests/: CMakeLists.txt  testOpenCV.cpp  testcmdline.cpp
Learn/OpenCV/examples/tests/split_frontback/: OpenCV背景分离总结.md  Stereo_Matching.cpp  auto_matting.cpp  bgfg_segm.cpp  frontback.cpp  grabcut.cpp  laplacian_blend.cpp  possion_matting.cpp
